--- a/web/components/libs/iumio_manager/css/index.css
+++ b/web/components/libs/iumio_manager/css/index.css
@@ -3,7 +3,15 @@
     background-color: red!important;
 }
 
+.manager-options div
+{
+    padding-bottom: 20px!important;
+}
 
+.manager-options div a
+{
+    width: 150px!important;
+}
 /* Custom Code Here */
 .container-new-new .check input {
     display: none!important;
