Referer to changelog for v0.3.9

--- a/web/components/libs/iumio_manager/css/index.css
+++ b/web/components/libs/iumio_manager/css/index.css
@@ -38,7 +38,7 @@
     word-wrap: break-word!important;
 }
 
-.errorlastlog li
+.errorlastlog li, .lastlog li, .lastlog
 {
     word-wrap: break-word!important;
 }
