--- a/web/components/libs/iumio_manager/css/index.css
+++ b/web/components/libs/iumio_manager/css/index.css
@@ -49,6 +49,24 @@
 .fs16
 {
     font-size: 16px!important;
+
+}
+
+.filelink
+{
+    width: 80%;
+    position: relative;
+    top:6px;
+    white-space: nowrap;
+    overflow: auto;
+    display: inline-block;
+    /* border: 1px solid #ddd; */
+    margin: 0;
+}
+
+.fs16 i
+{
+    padding-right: 20px!important;
 }
 
 .sidebar-list li a p
