--- a/web/components/libs/iumio_manager/css/index.css
+++ b/web/components/libs/iumio_manager/css/index.css
@@ -61,6 +61,7 @@
     overflow: auto;
     display: inline-block;
     /* border: 1px solid #ddd; */
+    direction: rtl;
     margin: 0;
 }
 
@@ -247,12 +248,12 @@
     }*/
 }
 
-.red-color
-{
-    color: red;
-}
+.iumio-red-color
+ {
+     color: red;
+ }
 
-.green-color
+.iumio-green-color
 {
     color: green;
 }
@@ -303,6 +304,11 @@ margin-top: 5px!important;
 
 .img-responsive-iumio-framework{
     max-width: 90%!important;
+}
+
+.applist
+{
+    word-break: break-all;
 }
 /**********/
 
