--- a/web/components/libs/iumio_framework/assets/css/iumioTaskBar.css
+++ b/web/components/libs/iumio_framework/assets/css/iumioTaskBar.css
@@ -389,6 +389,11 @@
 
 }
 
+.iumioTaskBarLogsTitle
+{
+    font-size: 15px;
+}
+
 .iumioTaskBarPulse {
     animation: pulse 2s infinite;
 }
@@ -410,6 +415,49 @@
 {
     position: relative;
     top: 1px;
+}
+
+
+.iumioTaskBarBounceIn {
+    -webkit-animation: bounceIn 1s ease-in;
+}
+
+@-webkit-keyframes iumiobounceIn{
+    0% {
+        transform: scale(0.1);
+        -webkit-transform: scale(0.1);
+        opacity: 0;
+    }
+
+    60% {
+        transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+    }
+}
+
+@keyframes iumiobounceIn{
+    0% {
+        transform: scale(0.1);
+        -webkit-transform: scale(0.1);
+        opacity: 0;
+    }
+
+    60% {
+        transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+    }
 }
 
 @-webkit-keyframes iumioTaskBarPulse {
